2015-07-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure:
	* configure.in:
	* device/include/Makefile.in:
	* support/sdbinutils/Makefile.in:
	* support/sdbinutils/binutils/Makefile.in:
	  Make "make install" and "make uninstall" more clear.

2015-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/binutils/*
	  Fix bug #2394 and do not ship files generated by yacc.

2015-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Patch from z88dk to allow comments in between rule and condition.

2015-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* Merge upstream binutils 2.25 by merging binutils branch into trunk.

2015-07-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/peep.c:
	  Add NULL pointer check.

2015-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Adjust buffer sizes RFE #441.

2015-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx,
	  support/regression/tests/version.c:
	  Implement patchlevel macro RFE #441.

2015-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Merge upstream binutils 2.25.

2015-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Import more parts of upstream binutils 2.23.2.

2015-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Import more parts of upstream binutils 2.23.2.

2015-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* device/include/float.h:
	  Hide sdcc library private macros.
	* support/sdbinutils/include/objalloc.h:
	* support/sdbinutils/libiberty/objalloc.c:
	  Apply patches from GNU.

2015-06-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure:
	* configure.in:
	* device/non-free/include/Makefile.in:
	  Fix the bug "make uninstall" left empty directory. 
	* src/SDCCBBlock.c:
	  Apply patch #158 to fix bug #1693.
	* support/regression/tests/version.c:
	  Fix the failure in "make test-host".

2015-06-24 Philipp Klaus Krause <pkk AT spth.de>
